kube/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rhys-go-webserver
spec:
  selector:              
    matchLabels:                       
      app: rhys-go-webserver
  replicas: 1
  template:
    metadata:
      labels:
        app: rhys-go-webserver
    spec:
      containers:
      - image: rhysemmas/go-webserver:1.0
        imagePullPolicy: Always
        name: server
