kube/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rhys-go-webserver
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: rhys-go-webserver
